# duality

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/: CMakeLists.txt
include/duality/: builtin_assume.hpp  compatibility.hpp  core_iterator.hpp  core_view.hpp  optional.hpp  range.hpp  wrapping_construct.hpp
include/duality/actions/: reverse.hpp
include/duality/factories/: empty.hpp  iota.hpp  repeat.hpp  single.hpp
include/duality/operations/: reverse.hpp  to.hpp
include/duality/viewifiers/: array.hpp  contiguous.hpp  forward_list.hpp  istream.hpp  span.hpp  vector.hpp
include/duality/views/: as_const.hpp  as_input_range.hpp  concat.hpp  eager_split_by.hpp  eager_take.hpp  eager_take_while.hpp  filter.hpp  lazy_take.hpp  reverse.hpp  take.hpp  transform.hpp
test/: CMakeLists.txt  view_assert.hpp
test/actions/: reverse.cpp
test/factories/: empty.cpp  iota.cpp  repeat.cpp  single.cpp
test/operations/: reverse.cpp  to.cpp
test/viewifiers/: contiguous.cpp  forward_list.cpp  istream.cpp
test/views/: as_const.cpp  as_input_range.cpp  concat.cpp  eager_split_by.cpp  eager_take.cpp  eager_take_while.cpp  filter.cpp  lazy_take.cpp  mixed.cpp  range_based_for_loop.cpp  reverse.cpp  take.cpp  transform.cpp
